<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MotoStudent Florida</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="conectarUSB_text">Conectar comuniciación</string>
    <string name="desconectarUSB_text">Desconectar comuniciación</string>
    <string name="contenedorTexto_text">Sin conexión</string>
    <string name="grabaGPS_text">Inicia posicionamiento GPS</string>
    <string name="paraGPS_text">Detiene posicionamiento GPS</string>

</resources>
